@@ -1,7 +1,8 @@
-PRJ_VER=2.4.1
+PRJ_VER=2.4.0
 SUMMARY=Suitable for more generic build
 REDHAT_BUGZILLA=1002279,1093336
 [Changes]
 - ManageDependency: Make changes suitable for more generic *nix build.
     e.g. FEDORA_NAME -> PACKAGE_NAME
+- ManageZanata: MANAGE_ZANATA: New option CLEAN_ZANATA_XML.
 
