@@ -1,3 +1,8 @@
+* Tue Aug 19 2014 Ding-Yi Chen <dchen at redhat.com> - 2.4.0
+- ManageDependency: Make changes suitable for more generic *nix build.
+    e.g. FEDORA_NAME -> PACKAGE_NAME
+- ManageZanata: MANAGE_ZANATA: New option CLEAN_ZANATA_XML.
+
 * Fri Aug 15 2014 Ding-Yi Chen <dchen at redhat.com> - 2.1.3
 - Fixed cmake-fedora-fedpkg    	
 
